--- a/connect.html
+++ b/connect.html
@@ -74,7 +74,6 @@
         }
         .status.online { background: #d1fae5; color: #065f46; }
         .status.connected { background: #dbeafe; color: #1e40af; }
-        .status.error { background: #fee2e2; color: #991b1b; }
         .section {
             background: white;
             border-radius: 16px;
@@ -89,9 +88,10 @@
             color: white;
             margin-bottom: 12px;
             cursor: pointer;
-            transition: all 0.2s;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
-        .device-card:hover { transform: translateY(-2px); }
         .drop-zone {
             border: 3px dashed #d1d5db;
             border-radius: 16px;
@@ -190,6 +190,7 @@
         @media (max-width: 768px) {
             .controls { flex-direction: column; }
             .btn { width: 100%; }
+            .device-card { flex-direction: column; align-items: flex-start; }
         }
     </style>
 </head>
@@ -240,14 +241,14 @@
         <input type="file" id="fileInput" class="file-input" multiple onchange="handleFileSelect(this.files)">
 
         <div id="transferList" style="display: none;">
-            <h3 style="margin-bottom: 16px;">📊 Transfers</h3>
+            <h3 style="margin-bottom: 16px;">📊 Sending Files</h3>
             <div id="transferItems"></div>
         </div>
     </div>
 
     <!-- Received Files -->
     <div class="section">
-        <h2>📥 Received</h2>
+        <h2>📥 Received Files</h2>
         <div id="receivedFiles">
             <p style="color: #6b7280; text-align: center; padding: 20px;">
                 Received files will appear here
@@ -316,14 +317,11 @@
         let qrScanner = null;
         let connectedTo = null;
         let receivedFiles = new Map();
-        let discoveryInterval = null;
-        let heartbeatInterval = null;
 
-        // INITIALIZATION
         window.onload = function() {
             console.log('🚀 LocalDrop Starting...');
 
-            // Get or create device ID (PERMANENT - never changes)
+            // Get or create device ID
             myDeviceId = localStorage.getItem('deviceId');
             if (!myDeviceId) {
                 myDeviceId = 'DEV-' + Date.now() + '-' + Math.random().toString(36).substring(2, 8);
@@ -338,62 +336,61 @@
 
             console.log('✅ Device initialized:', { id: myDeviceId, name: myDeviceName });
 
-            // Start heartbeat IMMEDIATELY
+            // Start heartbeat
             startHeartbeat();
+
+            // Start listening for incoming files
+            startFileListener();
 
             // Setup drag & drop
             setupDragDrop();
 
-            // Edit name on first visit
             if (!localStorage.getItem('visited')) {
                 localStorage.setItem('visited', 'true');
                 setTimeout(() => editDeviceName(), 500);
             }
         };
 
-        // HEARTBEAT - Send signal every 2 seconds (CRITICAL!)
+        // HEARTBEAT - Keep device visible
         function startHeartbeat() {
-            // Send first heartbeat immediately
-            sendHeartbeat();
-
-            // Then send every 2 seconds
-            heartbeatInterval = setInterval(sendHeartbeat, 2000);
-
-            console.log('💓 Heartbeat started - will send every 2 seconds');
+            setInterval(() => {
+                const deviceData = {
+                    id: myDeviceId,
+                    name: myDeviceName,
+                    timestamp: Date.now()
+                };
+                localStorage.setItem('device_' + myDeviceId, JSON.stringify(deviceData));
+            }, 2000);
         }
 
-        function sendHeartbeat() {
-            const timestamp = Date.now();
+        // LISTEN FOR INCOMING FILES
+        function startFileListener() {
+            setInterval(() => {
+                // Listen for files sent TO this device
+                for (let i = 0; i < localStorage.length; i++) {
+                    const key = localStorage.key(i);
 
-            // Store device data with NEW timestamp
-            const deviceData = {
-                id: myDeviceId,
-                name: myDeviceName,
-                timestamp: timestamp, // UPDATE timestamp every heartbeat!
-                qrData: 'LOCALDROP:' + myDeviceId + ':' + myDeviceName
-            };
+                    // Look for files: transfer_FROM_TO
+                    if (key && key.startsWith('transfer_') && key.endsWith('_' + myDeviceId)) {
+                        try {
+                            const fileData = JSON.parse(localStorage.getItem(key));
 
-            localStorage.setItem('device_' + myDeviceId, JSON.stringify(deviceData));
+                            // Only process if not already received
+                            if (!receivedFiles.has(key)) {
+                                console.log('📥 Incoming file:', fileData.fileName);
+                                receivedFiles.set(key, fileData);
+                                addReceivedFile(fileData.fileName, fileData.size);
 
-            // Clean up old devices (not seen in 15 seconds)
-            cleanupOldDevices(timestamp);
-        }
-
-        // Remove devices that haven't sent heartbeat in 15 seconds
-        function cleanupOldDevices(now) {
-            for (let i = localStorage.length - 1; i >= 0; i--) {
-                const key = localStorage.key(i);
-                if (key && key.startsWith('device_')) {
-                    try {
-                        const device = JSON.parse(localStorage.getItem(key));
-                        // Remove if last heartbeat >15 seconds ago
-                        if (now - device.timestamp > 15000) {
-                            console.log('🗑️ Removing stale device:', device.name);
-                            localStorage.removeItem(key);
+                                // Show in connected devices that file was received
+                                updateConnectedDevices();
+                                showToast('📥 Received: ' + fileData.fileName);
+                            }
+                        } catch (e) {
+                            console.error('Error reading file:', e);
                         }
-                    } catch (e) {}
+                    }
                 }
-            }
+            }, 500); // Check every 500ms for new files
         }
 
         function discoverDevices() {
@@ -407,16 +404,11 @@
                     try {
                         const device = JSON.parse(localStorage.getItem(key));
 
-                        // ONLY show devices with FRESH heartbeat (within 15 seconds)
-                        const timeSinceHeartbeat = now - device.timestamp;
-                        console.log('Device:', device.name, 'Last heartbeat:', timeSinceHeartbeat + 'ms ago');
-
-                        if (timeSinceHeartbeat < 15000 && device.id !== myDeviceId) {
+                        // Show devices with fresh heartbeat (within 15 seconds)
+                        if (now - device.timestamp < 15000 && device.id !== myDeviceId) {
                             devices.push(device);
                         }
-                    } catch (e) {
-                        console.error('Error parsing device:', e);
-                    }
+                    } catch (e) {}
                 }
             }
 
@@ -428,41 +420,40 @@
             const container = document.getElementById('connectedDevices');
 
             if (devices.length === 0) {
-                container.innerHTML = '<p style="color: #6b7280; text-align: center; padding: 20px;">No devices found. Make sure other devices have this page open.</p>';
+                container.innerHTML = '<p style="color: #6b7280; text-align: center; padding: 20px;">No devices found</p>';
                 return;
             }
 
             container.innerHTML = '';
             devices.forEach(device => {
+                const isConnected = connectedTo && connectedTo.id === device.id;
                 const card = document.createElement('div');
                 card.className = 'device-card';
-                card.onclick = () => connectToDevice(device);
+                card.style.background = isConnected ? 'linear-gradient(135deg, #10b981 0%, #059669 100%)' : 'linear-gradient(135deg, #667eea 0%, #764ba2 100%)';
+
+                const status = isConnected ? '✅ Connected' : 'Click to connect';
+
+                const btn = isConnected ? 
+                    `<button onclick="disconnectDevice()" class="btn btn-danger" style="padding: 8px 12px;">Disconnect</button>` :
+                    `<button onclick="connectToDevice({id: '${device.id}', name: '${device.name}'})" class="btn" style="background: rgba(255,255,255,0.2); color: white; padding: 8px 12px;">Connect</button>`;
+
                 card.innerHTML = `
-                    <div style="font-weight: 600; margin-bottom: 4px;">📱 ${device.name}</div>
-                    <div style="font-size: 12px; opacity: 0.9;">Click to connect</div>
+                    <div>
+                        <div style="font-weight: 600; margin-bottom: 4px;">📱 ${device.name}</div>
+                        <div style="font-size: 12px; opacity: 0.9;">${status}</div>
+                    </div>
+                    ${btn}
                 `;
                 container.appendChild(card);
             });
         }
 
         function connectToDevice(device) {
-            console.log('📞 Connecting to:', device.name);
+            console.log('📞 Connected to:', device.name);
 
             connectedTo = device;
             updateStatus('✅ Connected to ' + device.name, 'connected');
-
-            const disconnectBtn = `<button onclick="disconnectDevice()" class="btn btn-danger" style="padding: 8px 12px;">Disconnect</button>`;
-
-            document.getElementById('connectedDevices').innerHTML = `
-                <div class="device-card" style="margin-bottom: 0; display: flex; justify-content: space-between; align-items: center;">
-                    <div>
-                        <div style="font-weight: 600;">📱 ${device.name}</div>
-                        <div style="font-size: 12px; opacity: 0.9;">Connected • Stable</div>
-                    </div>
-                    ${disconnectBtn}
-                </div>
-            `;
-
+            updateDevicesList(getDevicesList());
             showToast('✅ Connected to ' + device.name);
         }
 
@@ -471,6 +462,24 @@
             updateStatus('✅ Ready to connect', 'online');
             discoverDevices();
             showToast('🔌 Disconnected');
+        }
+
+        function getDevicesList() {
+            const devices = [];
+            const now = Date.now();
+
+            for (let i = 0; i < localStorage.length; i++) {
+                const key = localStorage.key(i);
+                if (key && key.startsWith('device_')) {
+                    try {
+                        const device = JSON.parse(localStorage.getItem(key));
+                        if (now - device.timestamp < 15000 && device.id !== myDeviceId) {
+                            devices.push(device);
+                        }
+                    } catch (e) {}
+                }
+            }
+            return devices;
         }
 
         function editDeviceName() {
@@ -492,7 +501,6 @@
             localStorage.setItem('deviceName', myDeviceName);
             document.getElementById('currentDeviceName').textContent = myDeviceName;
             closeModal('nameModal');
-            sendHeartbeat(); // Update immediately
             showToast('✅ Name updated');
         }
 
@@ -524,7 +532,7 @@
                 stream.getTracks().forEach(track => track.stop());
                 initQRScanner();
             } catch (error) {
-                showToast('❌ Camera access denied');
+                showToast('❌ Camera denied');
             }
         }
 
@@ -544,8 +552,6 @@
         }
 
         function handleQRScan(qrData) {
-            console.log('📷 QR scanned:', qrData);
-
             if (!qrData.startsWith('LOCALDROP:')) {
                 showToast('❌ Invalid QR');
                 return;
@@ -580,26 +586,48 @@
             document.getElementById('transferList').style.display = 'block';
 
             Array.from(files).forEach(file => {
-                const fileId = 'file-' + Date.now() + '-' + Math.random();
+                const fileId = 'transfer_' + myDeviceId + '_' + connectedTo.id + '_' + Date.now();
                 addTransferItem(fileId, file.name, file.size);
 
-                // Simulate file send
-                let progress = 0;
-                const interval = setInterval(() => {
-                    progress += Math.random() * 15 + 10;
-                    if (progress >= 100) {
-                        progress = 100;
-                        clearInterval(interval);
-                        updateTransferProgress(fileId, 100);
-                        showToast('✅ ' + file.name + ' sent!');
+                // Read file as base64
+                const reader = new FileReader();
+                reader.onload = function() {
+                    const base64 = reader.result.split(',')[1]; // Remove data URL prefix
 
-                        setTimeout(() => {
-                            addReceivedFile(file.name, file.size);
-                        }, 500);
-                    } else {
-                        updateTransferProgress(fileId, Math.floor(progress));
-                    }
-                }, 300);
+                    // Send file data via localStorage
+                    const fileData = {
+                        id: fileId,
+                        fileName: file.name,
+                        fileSize: file.size,
+                        fileType: file.type,
+                        fromDevice: myDeviceId,
+                        fromDeviceName: myDeviceName,
+                        toDevice: connectedTo.id,
+                        data: base64,
+                        timestamp: Date.now()
+                    };
+
+                    // Store in localStorage (REAL TRANSFER!)
+                    localStorage.setItem(fileId, JSON.stringify(fileData));
+
+                    console.log('📤 File sent to localStorage:', file.name);
+
+                    // Simulate progress
+                    let progress = 0;
+                    const interval = setInterval(() => {
+                        progress += 20;
+                        if (progress >= 100) {
+                            progress = 100;
+                            clearInterval(interval);
+                            updateTransferProgress(fileId, 100);
+                            showToast('✅ Sent: ' + file.name);
+                        } else {
+                            updateTransferProgress(fileId, progress);
+                        }
+                    }, 200);
+                };
+
+                reader.readAsDataURL(file);
             });
         }
 
@@ -675,6 +703,10 @@
             document.getElementById('connectionStatus').className = 'status ' + cls;
         }
 
+        function updateConnectedDevices() {
+            discoverDevices();
+        }
+
         function showToast(msg) {
             const toast = document.createElement('div');
             toast.textContent = msg;
@@ -695,11 +727,6 @@
 
         // Auto-discover every 5 seconds
         setInterval(discoverDevices, 5000);
-
-        // Cleanup on page unload
-        window.onbeforeunload = function() {
-            if (heartbeatInterval) clearInterval(heartbeatInterval);
-        };
     </script>
 </body>
 </html>
